Creation of subjects works returns all subjects to frontend
