# src/main/java/feedmon/testing/adapters/rest/Controllers/TestController.java
@@ -1,12 +1,13 @@
 package feedmon.testing.adapters.rest.Controllers;
 
-import feedmon.testing.adapters.database.SubjectRepository;
-import feedmon.testing.domain.Subject;
+import feedmon.testing.usecases.CreateClassUseCase;
+import feedmon.testing.usecases.GetAllSubjectsUseCase;
+import feedmon.testing.usecases.dtos.CreateClassRequestDto;
+import feedmon.testing.usecases.dtos.SubjectDto;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 import static feedmon.testing.util.Constants.TEXT_PLAIN_UTF_8_VALUE;
 
@@ -14,21 +15,28 @@ import static feedmon.testing.util.Constants.TEXT_PLAIN_UTF_8_VALUE;
 @RequestMapping("/api/testing")
 public class TestController {
 
-    private final SubjectRepository subjectRepository;
+    private final GetAllSubjectsUseCase getAllSubjectsUseCase;
+    private final CreateClassUseCase createClassUseCase;
 
     @Autowired
-    public TestController(SubjectRepository subjectRepository) {
-        this.subjectRepository = subjectRepository;
+    public TestController(GetAllSubjectsUseCase getAllSubjectsUseCase,
+                          CreateClassUseCase createClassUseCase) {
+        this.getAllSubjectsUseCase = getAllSubjectsUseCase;
+        this.createClassUseCase = createClassUseCase;
     }
 
-    @GetMapping(value = "", produces = TEXT_PLAIN_UTF_8_VALUE)
-    public String test() {
+    @GetMapping(value = "")
+    public List<SubjectDto> getAllSubjects() {
+        return this.getAllSubjectsUseCase.execute();
+    }
+
+    @GetMapping(value = "{id}", produces = TEXT_PLAIN_UTF_8_VALUE)
+    public String test(@PathVariable Long id) {
         return "Working";
     }
 
     @PutMapping(value = "create")
-    public void create() {
-        this.subjectRepository.save(new Subject("English", "Petra"));
+    public void create(@RequestBody CreateClassRequestDto createClassRequestDto) {
+        createClassUseCase.execute(new CreateClassUseCase.Input(createClassRequestDto));
     }
-    
 }
